p2/app3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
spec:
  defaultBackend:
    service:
      name: app3-service
      port:
        number: 80
